--- a/src/FetchFiles.Common/FetchFiles.Common.csproj
+++ b/src/FetchFiles.Common/FetchFiles.Common.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SSH.NET" Version="2025.0.0" />
   </ItemGroup>
 
 </Project>
